logs/flowz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz'...
Compiling './lib/python3.5/site-packages/flowz/app.py'...
***   File "./lib/python3.5/site-packages/flowz/app.py", line 92
    raise self.exc_info[1], None, self.exc_info[2]
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz/channels'...
Compiling './lib/python3.5/site-packages/flowz/channels/tools.py'...
***   File "./lib/python3.5/site-packages/flowz/channels/tools.py", line 45
    return lambda (k, g): lower <= len(g) <= upper
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz/examples'...
Compiling './lib/python3.5/site-packages/flowz/examples/syntax.py'...
***   File "./lib/python3.5/site-packages/flowz/examples/syntax.py", line 25
    dicts = together.map(lambda (dbls, trpls, eventrp, oddtrp): {
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz/test'...
Listing './lib/python3.5/site-packages/flowz/test/artifacts'...
Listing './lib/python3.5/site-packages/flowz/test/channels'...
Compiling './lib/python3.5/site-packages/flowz/test/channels/read_bound_test.py'...
***   File "./lib/python3.5/site-packages/flowz/test/channels/read_bound_test.py", line 24
    received = yield drain(chan, lambda (c, l): reads.append(c))
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz/test/util'...
Compiling './lib/python3.5/site-packages/flowz/test/util/min_max_test.py'...
***   File "./lib/python3.5/site-packages/flowz/test/util/min_max_test.py", line 13
    print v
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flowz/util.py'...
***   File "./lib/python3.5/site-packages/flowz/util.py", line 175
    return out.map(LastResult(lambda (k, (v, fn)), last: fn(v, last)))
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flowz-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
